force-app/main/default/objects/Character__c/fields/Affiliation_Name__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_Name__c</fullName>
    <label>Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>