force-app/main/default/objects/Character__c/fields/Affiliation_with__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_with__c</fullName>
    <label>Affiliation With</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Police</fullName>
            </value>
            <value>
                <fullName>Politics</fullName>
            </value>
            <value>
                <fullName>Advocate</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>