force-app/main/default/objects/Character__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Characters</relationshipLabel>
    <relationshipName>Characters</relationshipName>
    <type>Lookup</type>
</CustomField>