force-app/main/default/objects/Character__c/fields/BM_Comments_for_Character__c.field-meta.xml
<CustomField>
    <fullName>BM_Comments_for_Character__c</fullName>
    <label>BM Comments for Character</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>