force-app/main/default/objects/Character__c/fields/Character__c.field-meta.xml
<CustomField>
    <fullName>Character__c</fullName>
    <label>Character</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Below Average</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>