force-app/main/default/objects/Character__c/fields/Character_Of_Affiliated_Person__c.field-meta.xml
<CustomField>
    <fullName>Character_Of_Affiliated_Person__c</fullName>
    <label>Character Of Affiliated Person</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>