force-app/main/default/objects/Character__c/fields/Consumer_Durables__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Durables__c</fullName>
    <label>Consumer Durables</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>Flat TV</fullName>
            </value>
            <value>
                <fullName>Normal TV</fullName>
            </value>
            <value>
                <fullName>Refrigerator</fullName>
            </value>
            <value>
                <fullName>Cooler</fullName>
            </value>
            <value>
                <fullName>Sofa</fullName>
            </value>
            <value>
                <fullName>CAR</fullName>
            </value>
            <value>
                <fullName>2 Wheeler</fullName>
            </value>
            <value>
                <fullName>Washing Machine</fullName>
            </value>
            <value>
                <fullName>Flooring</fullName>
            </value>
            <value>
                <fullName>Painting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>