force-app/main/default/objects/Character__c/fields/Current_DPD__c.field-meta.xml
<CustomField>
    <fullName>Current_DPD__c</fullName>
    <label>Current DPD</label>
    <length>20</length>
    <type>Text</type>
</CustomField>