force-app/main/default/objects/Character__c/fields/Current_position_Position_held_in_Past__c.field-meta.xml
<CustomField>
    <fullName>Current_position_Position_held_in_Past__c</fullName>
    <label>Current position/Position held in Past</label>
    <length>255</length>
    <type>Text</type>
</CustomField>