force-app/main/default/objects/Character__c/fields/FeedBack__c.field-meta.xml
<CustomField>
    <fullName>FeedBack__c</fullName>
    <label>FeedBack</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>