force-app/main/default/objects/Character__c/fields/Is_Involved__c.field-meta.xml
<CustomField>
    <fullName>Is_Involved__c</fullName>
    <label>Is Involved</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>