force-app/main/default/objects/Character__c/fields/Lifestyle__c.field-meta.xml
<CustomField>
    <fullName>Lifestyle__c</fullName>
    <label>Lifestyle (Loan Amount 0 to 2 Lakhs)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Below Average</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>