force-app/main/default/objects/Character__c/fields/Lifestyle_Loan_Amount_8Lakhs__c.field-meta.xml
<CustomField>
    <fullName>Lifestyle_Loan_Amount_8Lakhs__c</fullName>
    <label>Lifestyle (Loan Amount &gt;8Lakhs)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Below Average</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>