force-app/main/default/objects/Character__c/fields/Living_Standard__c.field-meta.xml
<CustomField>
    <fullName>Living_Standard__c</fullName>
    <label>Living Standard</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Below Average</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>