force-app/main/default/objects/Character__c/fields/Living_Standard_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Living_Standard_Remarks__c</fullName>
    <label>Remarks</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>