force-app/main/default/objects/Character__c/fields/Living_with_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Living_with_Applicant__c</fullName>
    <label>Living with Applicant?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>