force-app/main/default/objects/Character__c/fields/Max_DPD__c.field-meta.xml
<CustomField>
    <fullName>Max_DPD__c</fullName>
    <label>Max DPD</label>
    <length>20</length>
    <type>Text</type>
</CustomField>