force-app/main/default/objects/Character__c/fields/Money_lending_Involvement__c.field-meta.xml
<CustomField>
    <fullName>Money_lending_Involvement__c</fullName>
    <label>Money lending Involvement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>