force-app/main/default/objects/Character__c/fields/Name_of_party__c.field-meta.xml
<CustomField>
    <fullName>Name_of_party__c</fullName>
    <label>Name Of Party</label>
    <length>100</length>
    <type>Text</type>
</CustomField>