force-app/main/default/objects/Character__c/fields/Neighbour_Name__c.field-meta.xml
<CustomField>
    <fullName>Neighbour_Name__c</fullName>
    <label>Neighbour Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>