force-app/main/default/objects/Character__c/fields/Neighbour_Number__c.field-meta.xml
<CustomField>
    <fullName>Neighbour_Number__c</fullName>
    <label>Neighbour Number</label>
    <length>13</length>
    <type>Text</type>
</CustomField>