force-app/main/default/objects/Character__c/fields/Neighbour_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Neighbour_Remarks__c</fullName>
    <label>Remarks</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>