force-app/main/default/objects/Character__c/fields/No_Of_Child_Dependents__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Child_Dependents__c</fullName>
    <label>No Of Child Dependents</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>