force-app/main/default/objects/Character__c/fields/No_of_years_in_politics__c.field-meta.xml
<CustomField>
    <fullName>No_of_years_in_politics__c</fullName>
    <label>No Of Years In Politics</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>