force-app/main/default/objects/Character__c/fields/Number_Of_Dependents__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Dependents__c</fullName>
    <label>Number Of Dependents</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>