force-app/main/default/objects/Character__c/fields/O_S__c.field-meta.xml
<CustomField>
    <fullName>O_S__c</fullName>
    <label>O/S</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>