force-app/main/default/objects/Character__c/fields/Obligations__c.field-meta.xml
<CustomField>
    <fullName>Obligations__c</fullName>
    <label>Obligations</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>