force-app/main/default/objects/Character__c/fields/Over_all_Remarks_Overall_Family_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Over_all_Remarks_Overall_Family_Remarks__c</fullName>
    <label>Over all Remarks (Overall Family Remarks</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>