force-app/main/default/objects/Character__c/fields/Overall_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Overall_Remarks__c</fullName>
    <label>Overall Remarks</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>