force-app/main/default/objects/Character__c/fields/Overall_Remarks_Highmark_Obligations__c.field-meta.xml
<CustomField>
    <fullName>Overall_Remarks_Highmark_Obligations__c</fullName>
    <label>Overall Remarks</label>
    <type>TextArea</type>
</CustomField>