force-app/main/default/objects/Character__c/fields/Overdue_Amount__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Amount__c</fullName>
    <label>Overdue Amount</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>