force-app/main/default/objects/Character__c/fields/PC_FIV_C_Relationship__c.field-meta.xml
<CustomField>
    <fullName>PC_FIV_C_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PC FIV-C Relationship</label>
    <referenceTo>Character__c</referenceTo>
    <relationshipLabel>Characters</relationshipLabel>
    <relationshipName>Characters</relationshipName>
    <type>Lookup</type>
</CustomField>