force-app/main/default/objects/Character__c/fields/Politics_Involvement__c.field-meta.xml
<CustomField>
    <fullName>Politics_Involvement__c</fullName>
    <label>Politics Involvement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>