force-app/main/default/objects/Character__c/fields/Present_Political_Status__c.field-meta.xml
<CustomField>
    <fullName>Present_Political_Status__c</fullName>
    <label>Present Political Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>