force-app/main/default/objects/Character__c/fields/Reference_check_done_with__c.field-meta.xml
<CustomField>
    <fullName>Reference_check_done_with__c</fullName>
    <label>Reference check done with</label>
    <length>200</length>
    <type>Text</type>
</CustomField>