force-app/main/default/objects/Character__c/fields/Relationship_Matrix__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Matrix__c</fullName>
    <label>Relationship Matrix</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dummy 1</fullName>
            </value>
            <value>
                <fullName>Dummy 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>