force-app/main/default/objects/Character__c/fields/Repayment_Behaviour_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Behaviour_Remarks__c</fullName>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>