force-app/main/default/objects/Character__c/fields/Section_Type__c.field-meta.xml
<CustomField>
    <fullName>Section_Type__c</fullName>
    <label>Section Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Family Detail</fullName>
            </value>
            <value>
                <fullName>Neighbour Detail</fullName>
            </value>
            <value>
                <fullName>Affiliation Detail</fullName>
            </value>
            <value>
                <fullName>Living Standard Detail</fullName>
            </value>
            <value>
                <fullName>Repayment Behaviour Detail</fullName>
            </value>
            <value>
                <fullName>FIV-B Character Detail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>