force-app/main/default/objects/Character__c/fields/To_be_considerd_for_DBR__c.field-meta.xml
<CustomField>
    <fullName>To_be_considerd_for_DBR__c</fullName>
    <label>To be considerd for DBR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>