force-app/main/default/objects/Character__c/recordTypes/AC_Character.recordType-meta.xml
<RecordType>
    <fullName>AC_Character</fullName>
    <active>true</active>
    <label>AC Character</label>
</RecordType>