force-app/main/default/objects/Character__c/recordTypes/FIV_B_Character.recordType-meta.xml
<RecordType>
    <fullName>FIV_B_Character</fullName>
    <active>true</active>
    <label>FIV-B Character</label>
</RecordType>