force-app/main/default/objects/Character__c/recordTypes/FIV_C_Character.recordType-meta.xml
<RecordType>
    <fullName>FIV_C_Character</fullName>
    <active>true</active>
    <label>FIV-C Character</label>
</RecordType>