force-app/main/default/objects/Character__c/recordTypes/PC_Character.recordType-meta.xml
<RecordType>
    <fullName>PC_Character</fullName>
    <active>true</active>
    <label>PC Character</label>
</RecordType>